few_css_changes_made

--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="weather.css">
 </head>
 <body>
- <p id="location"> </p>
- <p id="temperature"> </p>
- <p id="feelsLike"> </p>
- <p id="weather"> </p>
+<div id="container">
+    <p id="location"> </p>
+    <div id="floatParent">
+        <p id="temperature"> </p>
+        <p id="icon"></p>
+        
+    </div>
+    <div>
 
+        <p id="feelsLike"> </p>
+    </div>
+    <div>
+
+        <p id="weather"> </p>
+    </div>
+    
+</div>
  <script src="weatherApp.js"></script>
 </body>
 </html>
