--- a/local_storage_task/index.html
+++ b/local_storage_task/index.html
@@ -5,16 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="To_do_App.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
     <form id="ToDoForm" name="ToDoForm" onsubmit="submission()">
         <label for="Username">Name:</label><br>
-        <input type="text" id="Username" name="Username" placeholder="Sulav"><br>
+        <input type="text" id="Username" name="Username" placeholder="Name"><br>
         <label for="e-mail">E-mail:</label><br>
         <input type="email" id="e-mail" name="e-mail" placeholder="xyz@email.com"><br><br>
-        <input type="submit" value="submit">
+        <input type="submit" value="Add"><br><br>
     </form>
+    
+    <div>
+        <div id="DisplayData">
+            <button onclick="display()">show data</button>
+         </div>
+    </div>
  
 
 </body>
